--- a/src/App.css
+++ b/src/App.css
@@ -273,6 +273,7 @@ margin-top:0.5em;
   background-color: yellow;
   color: #333;
   display: block;
+  font-size: 48px;
   font-weight: 900;
   overflow: hidden;
   position: absolute;
