--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,30 @@ nav {
   width:100%;
   height: 100vh;
 }
+/* --- Skills and Experiences --- */
+
+#skills-title{
+  background-color: rgb(219, 217, 217);
+  border: none;
+  color: black;
+  padding: .2em;
+  text-align: center;
+  text-decoration: none;
+  margin: .2em;
+  border-radius: 1em;
+}
+
+#skills-item{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#logo{
+  width: 20%;
+}
+/* --- Skills and Experiences --- */
 /* --- Contact --- */
 
 #input-box{
